Small fixes to font weights to improve readability.

--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -22,7 +22,7 @@ a:hover, a:focus {
 
 h1 {
     font-family: 'Roboto', sans-serif;
-    font-weight: 200;
+    font-weight: 300;
     font-size : 2.25rem;
     line-height : 2.75rem;
     letter-spacing : 1.2px;
@@ -114,7 +114,7 @@ h6.subhead {
 
 p {
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-size : 18px;
     line-height : 24px;
     letter-spacing : 0.9px;
